# Issues-FS__CLI

./: README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci-pipeline.yml
.issues/: _index.json
.issues/.issues/config/: node-types.json
.issues/.issues/data/task/Task-1/: issue.json
.issues/config/: link-types.json
.issues/data/bug/: _index.json
.issues/data/bug/Bug-1/: issue.json
.issues/data/feature/: _index.json
.issues/data/feature/Feature-1/: issue.json
.issues/data/task/: _index.json
docs/: architecture.md  guide__agent-workflow-issues-format.md
docs/dev-briefs/v0.1.0__create-first-mvp-of-cli/: v0.1.0__brief__issues-fs-cli-architecture.md  v0.1.0__implementation_guide__cli-implementation.md
issues_fs_cli/: __init__.py
issues_fs_cli/cli/: CLI__Context.py  CLI__Label_Parser.py  CLI__Output.py  __init__.py  cli__check.py  cli__comment.py  cli__create.py  cli__delete.py  cli__init.py  cli__link.py  cli__list.py  cli__main.py  cli__normalise.py  cli__show.py  cli__types.py  cli__update.py
issues_fs_cli/utils/: Version.py
tests/unit/_bugs/: test__regression__cli_path_issues.py
tests/unit/bugs/: test__bug__cli_path_issues.py
tests/unit/cli/: test_CLI__Context.py  test_CLI__Label_Parser.py  test_CLI__Output.py  test_cli__check.py  test_cli__commands.py  test_cli__init.py  test_cli__normalise.py
tests/unit/utils/: test_Version.py
